feat: config log middleware, update StoryUserAction entity
